--- a/clinica_core/views/clinica_core_consulta.xml
+++ b/clinica_core/views/clinica_core_consulta.xml
@@ -66,7 +66,7 @@
                         </page>
                     </notebook>
                 </sheet>
-                 <chatter/>
+                <chatter/>
             </form>
         </field>
     </record>
@@ -88,25 +88,48 @@
         </field>
     </record>
 
+    <record id="view_clinica_core_consulta_graph" model="ir.ui.view">
+        <field name="name">clinica.core.consulta.graph</field>
+        <field name="model">clinica_core.consulta</field>
+        <field name="arch" type="xml">
+            <graph string="Análisis de Consultas" type="bar">
+                <field name="speciality_id" type="row"/>
+                <field name="doctor_id" type="row"/>
+            </graph>
+        </field>
+    </record>
+
+    <record id="view_clinica_core_consulta_pivot" model="ir.ui.view">
+        <field name="name">clinica.core.consulta.pivot</field>
+        <field name="model">clinica_core.consulta</field>
+        <field name="arch" type="xml">
+            <pivot string="Análisis de Consultas">
+                <field name="speciality_id" type="row"/>
+                <field name="doctor_id" type="col"/>
+            </pivot>
+        </field>
+    </record>
+
     <record id="action_clinica_core_consulta" model="ir.actions.act_window">
         <field name="name">Historial de Consultas</field>
         <field name="res_model">clinica_core.consulta</field>
-        <field name="view_mode">list,form</field>
+        <field name="view_mode">list,form,pivot,graph</field>
         <field name="search_view_id" ref="view_clinica_core_consulta_search"/>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Aún no hay consultas registradas.
             </p><p>
-                Las consultas se crean desde la vista de "Pacientes en Espera" al atender un turno.
-            </p>
+            Las consultas se crean desde la vista de "Pacientes en Espera" al atender un turno.
+        </p>
         </field>
     </record>
 
     <menuitem
-        id="menu_clinica_historial_consultas"
-        name="Historial de Consultas"
-        parent="menu_clinica_consultorio"
-        action="action_clinica_core_consulta"
-        sequence="20"/>
+            id="menu_clinica_historial_consultas"
+            name="Historial de Consultas"
+            parent="menu_clinica_consultorio"
+            action="action_clinica_core_consulta"
+            sequence="20"
+            groups="clinica_core.group_administrador_clinica,clinica_core.group_medico_clinica"/>
 
 </odoo>
