--- a/clinica_core/views/clinica_core_turno.xml
+++ b/clinica_core/views/clinica_core_turno.xml
@@ -104,7 +104,8 @@
             name="Turnos"
             parent="menu_clinica_core_root"
             action="action_clinica_core_turno"
-            sequence="10"/>
+            sequence="10"
+            groups="clinica_core.group_administrador_clinica,clinica_core.group_recepcionista_clinica"/>
 
     <!-- VISTAS DEL MÉDICO -->
 
@@ -132,22 +133,17 @@
         <field name="domain">[('state', '=', 'in_queue')]</field>
         <!--field name="context">{'search_default_medico_id': active_id}</field-->
         <field name="help" type="html">
-        <p class="o_view_nocontent_smiling_face">
-            No hay pacientes en la cola de espera en este momento.
-        </p>
-    </field>
+            <p class="o_view_nocontent_smiling_face">
+                No hay pacientes en la cola de espera en este momento.
+            </p>
+        </field>
     </record>
-
-    <menuitem
-            id="menu_clinica_consultorio"
-            name="Mi Consultorio"
-            parent="menu_clinica_core_root"
-            sequence="20"/>
 
     <menuitem
             id="menu_clinica_cola_espera"
             name="Pacientes en Espera"
             parent="menu_clinica_consultorio"
             action="action_clinica_core_cola_espera"
-            sequence="10"/>
+            sequence="10"
+            groups="clinica_core.group_administrador_clinica,clinica_core.group_medico_clinica"/>
 </odoo>
